--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     environment:
       - WEAVIATE_URL_VERBA=http://weaviate:8080
       - OPENAI_API_KEY=$OPENAI_API_KEY
+      - GROQ_API_KEY=$GROQ_API_KEY
       - COHERE_API_KEY=$COHERE_API_KEY
       - OLLAMA_URL=http://host.docker.internal:11434
       - OLLAMA_MODEL=$OLLAMA_MODEL
@@ -53,6 +54,7 @@ services:
       start_period: 10s
     environment:
       OPENAI_APIKEY: $OPENAI_API_KEY
+      GROQ_APIKEY: $GROQ_API_KEY
       COHERE_APIKEY: $COHERE_API_KEY
       QUERY_DEFAULTS_LIMIT: 25
       AUTHENTICATION_ANONYMOUS_ACCESS_ENABLED: 'true'
